# praktika_mod_3

./: .gitignore  Cargo.toml  README.md
blog-cli/: Cargo.toml  README.md
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: .env.example  Cargo.toml  build.rs
blog-server/.sqlx/: query-3faee98be4eb09fe990fd3be500e4f6131dac351879a4a89ccd514a71347d287.json  query-523cd10de49114d3b6a368bd9a8c5262c5e038de757f26f3e79463a332c024a3.json  query-7853bb0f0ae5db608d61ef35f827315f5ebbb42ad1e3610789e334ef21f15d82.json
blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  middleware.rs  mod.rs
blog-wasm/: Cargo.toml  index.html
blog-wasm/src/: lib.rs  main.rs
