[workspace]
resolver = "3"
members = ["blog-server", "blog-client", "blog-cli", "blog-wasm"]

[workspace.dependencies]
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tonic = "0.13"
prost = "0.13"