[package]
name = "blog-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-client = { path = "../blog-client" }
chrono = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
