[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0.100"
thiserror = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
