[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
prost-types = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0.100"
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }

[build-dependencies]
tonic-build = "0.13"
