[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = { workspace = true }
dotenvy = "0.15.7"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = { workspace = true }
tokio.workspace = true
