[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
argon2 = "0.5.3"
chrono = { workspace = true }
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = { workspace = true }
tokio.workspace = true
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "chrono"] }
