[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "blog-wasm"
path = "src/main.rs"

[dependencies]
blog-client = { path = "../blog-client" }
gloo-net = "0.7.0"
js-sys = "0.3.94"
reqwasm = "0.5.0"
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
serde_json.workspace = true
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.94", features = ["Window", "Document", "HtmlElement", "HtmlInputElement","console", "Storage"]}
yew = { version = "0.23.0", features = ["csr"] }
